--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,9 @@ AIzaSyCbYPTWzo4ea7xc1YKOPkH3aotgDNfhZhc
 
 meu_gemini.py
 xmls_temp
+plano_depuracao_detalhes_fiscais.md
+plano_melhorias_fiscais_avancadas.md
+plano_refatoracao_detalhes_fiscais.md
+plano_refatoracao_estoque_unidades.md
+plano_templates_fiscais.md
+melhorias_fiscal.md
