--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ plano_refatoracao_detalhes_fiscais.md
 plano_refatoracao_estoque_unidades.md
 plano_templates_fiscais.md
 melhorias_fiscal.md
+
+# Planos e Documentação Gemini
+plano_formalizacao_fiscal.md
+.gemini/GEMINI.md
+.gemini
