Povoamento Lotes Implementado, ainda com erro de filtro no hitórico

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ config/connection.py
 # Ambientes virtuais
 venv/
 config/.env
+.env
+.vector_store_id
+.assistant_id
 
 # Arquivos Python cache
 __pycache__/
